src/test/resources/frontendReference/invalid/semanticErr/class/inheritance/superclassUndefined.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:2 -- Class c is not defined in this scope
